2008-01-27  Mirco Bauer <meebey@meebey.net> 

	* SqliteProvider.cs, ISqlProvider.cs, AnsiSqlProvider.cs: renamed
	  Get*Statement to Create*Statement
	* ColumnAttribute.cs: only pass NOT NULL to table creation if it was
	  explicitly in the ColumnAttribute set
	
	* DBTest.cs: using column attributes on properties now
	
	* DatabaseManager.cs, Query.cs: using properties instead of fields now to
	  read/write the values

2008-01-26  Mirco Bauer <meebey@meebey.net> 

	* SqliteProvider.cs, MySqlProvider.cs, ColumnAttribute.cs, ISqlProvider.cs,
	  SmartDao.mdp, AnsiSqlProvider.cs, DatabaseManager.cs, Query.cs,
	  SmartDaoTest.cs: Added better support for NULL fields using IsNullable
	  in ColumnAttribute.
	
	  Implemented MySqlProvider and SqliteProvider.

2008-01-26  Mirco Bauer <meebey@meebey.net> 

	* DBTest.cs, Query.cs: removed broken support for non-nullable value types
	
	  finished basic implementation of GetAll()
	
	  added many null checks for method parameters
	
	* DatabaseManager.cs: fixed bug in CreateSelectCommand() if whereColumns is
	  empty
	* SmartDaoTest.cs: added more benchmarks

2008-01-25  Mirco Bauer <meebey@meebey.net> 

	* DatabaseManager.cs, SmartDao.mdp, Query.cs, SqlProvider.cs,
	  AnsiSqlProvider.cs: - renamed SqlProvider to AnsiSqlProvider.
	
	  - moved SQL statement construction into AnsiSqlProvider.
	
	  - moved DB command construction into DatabaseManager.
	
	  - left only O/R mapping using reflection code in Query.
